Были внесены изменения в HotelPropertyViewController, вынесены все аннотации документации Swagger в интерфейс HotelPropertyApi. Также был изменён метод addHotelAmenities для более оптимального добавления Amenity в сущность Hotel